--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-
+  repository_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -15,3 +15,4 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
