--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -1,22 +1,41 @@
-name: Deploy
-
+name: Deploy Worker
 on:
+  push:
+  pull_request:
   repository_dispatch:
-
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    name: Build & Deploy
     steps:
       - uses: actions/checkout@v2
+
+      # Add a conditional step to check the repository owner
+      - name: Check Repository Owner
+        run: |
+          if [ "${{ github.repository_owner }}" = "axiomhq" ]; then
+            echo "Deployment skipped. Repository owner is axiomhq."
+            exit 0
+          fi
+
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: "16.x"
+
       - run: npm install
-      - name: Publish
-        uses: cloudflare/wrangler-action@1.2.0
+
+      # Write the environment variables to wrangler.toml
+      - name: Write environment variables to wrangler.toml
+        run: |
+          echo "AXIOM_TOKEN = '${{ secrets.PRODUCTION_AXIOM_TOKEN }}'" >> wrangler.toml
+          echo "AXIOM_DATASET = '${{ secrets.PRODUCTION_AXIOM_DATASET }}'" >> wrangler.toml
+
+      - name: Build & Deploy Worker
+        uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-        env:
-          CF_ACCOUNT_ID: ${{secrets.CF_ACCOUNT_ID}}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          secrets: |
+            AXIOM_TOKEN
+            AXIOM_DATASET
+
