--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -38,4 +38,7 @@ jobs:
           secrets: |
             AXIOM_TOKEN
             AXIOM_DATASET
+          env:
+            AXIOM_TOKEN: ${{ secrets.AXIOM_TOKEN }}
+            AXIOM_DATASET: ${{ secrets.AXIOM_DATASET }}  
 
